# bake-forecast-cicd

./: CHANGELOG.md  README.md  pyproject.toml  sold_items_1.csv
.github/workflows/: publish.yaml  python-ci.yaml
src/bake-forecast/: forecast.py
src/bake_forecast/: cli.py  forecast.py
src/bake_forecast/tests/: test_forecast.py
