[project]
name = "bake-forecast-cicd"
version = "0.1.0"
description = "A simple program that predicts the number of cookies necessary to bake."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "ruff",
  "black",
  "mypy",
  "bandit",
  "types-requests"
]