[project]
name = "bake-forecast-cicd"
version = "0.1.0"
description = "A simple program that predicts the number of cookies necessary to bake."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "ruff",
  "black",
  "mypy"
]

[project.scripts]
get_average_bakes = "bake_forecast.cli:main"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "__pycache__", "build", "dist"]
skips = ["B101", "B110"]
